--- a/web/ui/RefLabel.css
+++ b/web/ui/RefLabel.css
@@ -1,7 +1,7 @@
 .ref-label {
   margin-right: 4px;
-  border-radius: 3px;
-  padding: 2px 6px;
+  border-radius: 9px;
+  padding: 2px 10px;
   color: white;
 }
 
